# resume-operator

./: .env.example  .gitignore  AI_ENGINEERING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.claude/rules/: ai-framework.md  architecture.md  documentation.md  gh-issue.md  git-commit.md  logging.md  pull-request.md  security.md  testing.md
.claude/skills/write-adr/: skill.md
.github/workflows/: ci.yml
docs/: architecture.md  deployment.md  development.md
docs/architectures/: architecture.md
docs/guides/: development.md
docs/issues/: 001-setup-dev-environment.md  002-implement-pdf-parser.md  003-test-pdf-parser.md  004-implement-llm-provider.md  005-test-llm-provider-config.md  006-implement-parse-resume-node.md  007-test-parse-resume-node.md  007-verify-langgraph-assembly.md  008-wire-parse-resume-cli.md  009-development-guide.md  010-development-guide.md  010-implement-ats-score-node.md  011-implement-analyze-gaps-node.md  011-implement-ats-score-node.md  012-implement-optimize-content-node.md  012-test-ats-score-node.md  013-implement-analyze-gaps-node.md  013-implement-pdf-generator.md  014-implement-generate-pdf-node.md  014-implement-optimize-content-node.md  015-implement-report-results-node.md  015-test-analyze-gaps-optimize-content.md  016-full-pipeline-integration-test.md  016-implement-pdf-generator.md  017-test-pdf-generator.md  017-wire-run-score-cli.md  018-add-structured-logging.md  018-implement-generate-pdf-node.md  019-implement-report-results-node.md  019-input-validation-error-messages.md  020-llm-json-extraction-utility.md  020-test-generate-pdf-report-results-nodes.md  021-full-pipeline-integration-test.md  021-setup-ci-quality-gates.md  022-deployment-guide.md  022-wire-run-score-cli.md  023-add-structured-logging.md  023-conditional-routing-skip-optimization.md  024-input-validation-error-messages.md  025-llm-json-extraction-utility.md  (+4 more)
src/resume_operator/: __init__.py  __main__.py  config.py  graph.py  main.py  state.py
src/resume_operator/nodes/: __init__.py  analyze_gaps.py  ats_score.py  generate_pdf.py  optimize_content.py  parse_resume.py  report_results.py
src/resume_operator/prompts/: __init__.py  ats_scoring.py  content_optimization.py  gap_analysis.py  resume_parsing.py
src/resume_operator/tools/: __init__.py  json_parser.py  llm_provider.py  pdf_generator.py  (+1 more)
tests/: conftest.py  test_analyze_gaps.py  test_ats_score.py  test_config.py  test_generate_pdf.py  test_graph.py  test_integration.py  test_json_parser.py  test_llm_provider.py  test_main.py  test_optimize_content.py  test_parse_resume.py  test_pdf_generator.py  test_pdf_parser.py  test_report_results.py  test_state.py
(+2 files in other folders)
