[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resume-operator"
version = "0.1.0"
description = "Resume Optimizer AI Agent — parses, scores, and tailors resumes for specific job descriptions"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-google-genai>=2.0",
    "pymupdf>=1.24",
    "reportlab>=4.0",
    "typer>=0.12",
    "rich>=13.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "coverage>=7.0",
]

[project.scripts]
resume-operator = "resume_operator.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/resume_operator"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = [
    "typer",
    "rich.*",
    "pydantic_settings",
    "langchain_core.*",
    "langchain_openai",
    "langchain_anthropic",
    "langchain_google_genai",
    "langgraph.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "resume_operator.main"
disable_error_code = ["untyped-decorator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
